fix: changing border to box-shadow on hover on the mnemonic names to get rid of the slight layout shift that was happening.

--- a/src/Command/Components/Watcher/Watcher.css
+++ b/src/Command/Components/Watcher/Watcher.css
@@ -74,7 +74,7 @@ rux-pop-up.mnemonic-pop-up span[slot="trigger"] {
 }
 
 rux-pop-up.mnemonic-pop-up span[slot="trigger"]:hover {
-  border-bottom: 1px solid var(--color-text-interactive-default);
+  box-shadow: inset 0 -1px 0 0 var(--color-text-interactive-default);
 }
 
 rux-pop-up.mnemonic-pop-up rux-card::part(container) {
